conda python, script separation, all pieces now compile

--- a/desc_lss/Dockerfile
+++ b/desc_lss/Dockerfile
@@ -2,8 +2,9 @@ FROM desc_lss_base
 
 ## clean up to make a smaller container
 USER root
-RUN apt-get remove -y git
+RUN apt-get autoremove -y git emacs-nox screen && apt-get clean all
 RUN rm -rf /home/lss/src
+USER lss
 
 
 
