--- a/desc_lss/Dockerfile
+++ b/desc_lss/Dockerfile
@@ -1,10 +1,17 @@
+## build with
+## docker build -t desc_lss .
+
 FROM desc_lss_base
 
-## clean up to make a smaller container
-USER root
-RUN apt-get autoremove -y git emacs-nox screen && apt-get clean all
-RUN rm -rf /home/lss/src
+## Now the actual libraries that will change more often
+WORKDIR /home/lss
 USER lss
+COPY install-software.sh .
+COPY scripts/Makefile.CoLoRe .
+COPY scripts/runCoLoRe .
+RUN bash /home/lss/install-software.sh
+
+
 
 
 
