--- a/desc_lss/scripts/Makefile.CoLoRe
+++ b/desc_lss/scripts/Makefile.CoLoRe
@@ -119,14 +119,18 @@ COSMOMADO = src/cosmo_mad.o
 COSMOO = src/cosmo.o
 FOURIERO = src/fourier.o
 DENSO = src/density.o
-LCO = src/lightcone.o
+SRCSO = src/srcs.o
+IMAPO = src/imap.o
+KAPPAO = src/kappa.o
+ISWO = src/isw.o
 IOO = src/io.o
 HPIXO = src/healpix_extra.o
-PIXO = src/pixelization.o
+BEAMO = src/beaming.o
 PREDICTO = src/predictions.o
 FFTLOGO = src/fftlog.o
 MAIN = src/main.c
-OFILES = $(COMMONO) $(COSMOMADO) $(COSMOO) $(FOURIERO) $(DENSO) $(LCO) $(IOO) $(HPIXO) $(PIXO) $(PREDICTO) $(FFTLOGO)
+OFILES = $(COMMONO) $(COSMOMADO) $(COSMOO) $(FOURIERO) $(DENSO) $(BEAMO) $(IOO) $(HPIXO) $(SRCSO) $(IMAPO) $(KAPPAO) $(ISWO) $(FFTLOGO) $(PREDICTO)
+#OFILES = $(COMMONO) $(COSMOMADO) $(COSMOO) $(FOURIERO) $(DENSO) $(LCO) $(IOO) $(HPIXO) $(PIXO) $(PREDICTO) $(FFTLOGO)
 
 EXEC = CoLoRe
 
